--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,47 +7,41 @@ spring:
       concurrency: 10
       group-id: consumer_contract_send
       bootstrap-servers: 10.122.30.29:9092
-
   datasource:
-    primary:
-          driver-class-name: com.mysql.jdbc.Driver
-          username: root
-          password: root
-          url: jdbc:mysql://127.0.0.1/test?characterEncoding=utf-8&useSSL=false
-          validation-query: SELECT 1
-          validation-query-timeout: 5000
-          test-on-borrow: true
-          test-on-connect: true
-    secondary:
-      driver-class-name: com.mysql.jdbc.Driver
-      username: root
-      password: root
-      url: jdbc:mysql://127.0.0.1/world?characterEncoding=utf-8&useSSL=false
-      validation-query: SELECT 1
-      validation-query-timeout: 5000
-      test-on-borrow: true
-      test-on-connect: true
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: root
+    url: jdbc:mysql://127.0.0.1/test?characterEncoding=utf-8&useSSL=false
+    validation-query: SELECT 1
+    validation-query-timeout: 5000
+    test-on-borrow: true
+    test-on-connect: true
     hikari:
-         data-source-properties:
-            cachePrepStmts: true
-            prepStmtCacheSize: 250
-            prepStmtCacheSqlLimit: 2048
-            useServerPrepStmts: true
-            maximumPoolSize: 30
-            minimumIdle: 5
-            autoCommit: true
-            useLocalSessionState: true
-            useLocalTransactionState: true
-            rewriteBatchedStatements: true
-            cacheResultSetMetadata: true
-            cacheServerConfiguration: true
-            elideSetAutoCommits: true
-            connectionTestQuery: SELECT 1
+      data-source-properties:
+        cachePrepStmts: true
+        prepStmtCacheSize: 250
+        prepStmtCacheSqlLimit: 2048
+        useServerPrepStmts: true
+        maximumPoolSize: 30
+        minimumIdle: 5
+        autoCommit: true
+        useLocalSessionState: true
+        useLocalTransactionState: true
+        rewriteBatchedStatements: true
+        cacheResultSetMetadata: true
+        cacheServerConfiguration: true
+        elideSetAutoCommits: true
+        connectionTestQuery: SELECT 1
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   jpa:
-    show-sql: true
+    show-sql: true    
+    hibernate:  
+      #ddl-auto: update 
+      naming:  
+        physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy  
+    
   application:
     name: pcsd-orderservicecenter-contract
 #  cloud:
