--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://127.0.0.1/test?characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://127.0.0.1/fly?characterEncoding=utf-8&useSSL=false
     validation-query: SELECT 1
     validation-query-timeout: 5000
     test-on-borrow: true
