--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,5 @@
 spring:
-  kafka:
-    consumer:
-      enable-auto-commit: true
-      auto-commit-interval: 1000
-      auto-offset-reset: latest
-      concurrency: 10
-      group-id: consumer_contract_send
-      bootstrap-servers: 10.122.30.29:9092
+  
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
@@ -41,48 +34,26 @@ spring:
       #ddl-auto: update 
       naming:  
         physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy  
-    
+#  security:
+#    user:
+#      name: admin
+#      password: admin
   application:
-    name: pcsd-orderservicecenter-contract
-#  cloud:
-#    config:
-#      discovery:
-#        enabled: true
-#        service-id: config   # 指定远程配置文件服务器  
+    name: lvzheng-service
 eureka:
   instance:
-      preferIpAddress: true
+    preferIpAddress: true
   client:
     service-url:
- #     defaultZone: http://10.96.83.154:8761/eureka/    
-      defaultZone: http://10.96.83.154:8761/eureka/,http://10.96.83.165:8761/eureka/,http://10.96.83.178:8761/eureka/
-#      defaultZone: http://10.96.83.167:8761/eureka/,http://10.96.83.169:8761/eureka/,http://10.96.83.181:8761/eureka/
+      defaultZone: http://localhost:8888/eureka/ 
+      
+
 server:
-  port: 8888
-#  context-path: /v1
-filterPass: false
+  port: 9999
 
-hystrix:   
-  threadpool:   
-    default:   
-      coreSize: 500  #并发执行的最大线程数，默认10  
-  command:   
-    paas-file:   
-      execution:   
-        isolation:   
-          thread:   
-            timeoutInMilliseconds: 3600000   
-    default:   
-      execution:   
-        isolation:   
-          thread:   
-            timeoutInMilliseconds: 8000  #命令执行超时时间，默认1000ms  
+logging:
+  level:
+    com.itmuch.cloud.feign.UserFeignClient: DEBUG
 
-ribbon:  
-  ReadTimeout: 60000  
-  ConnectTimeout: 60000
 
-timeout: 90000
-contract: sit_contractSend
-tokenCheck: https://api-dev.unifiedcloud.lenovo.com/pcsd-usf-login/api/User/TokenCheck
 
