--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
     show-sql: true
 #    hibernate:
 #      ddl-auto: update  #配置自动建表：updata:没有表新建，有表更新操作,控制台显示建表语句
+  redis:
+    host: 10.122.30.221
+    port: 6379
+    password: 8ik,9ol.
   data:
     mongodb:
       uri: mongodb://localhost:27017/lvzheng
