--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--rabbitmq-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
         <!--自动生成get和set -->
         <dependency>
             <groupId>org.projectlombok</groupId>
