--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,11 @@ spring:
       cluster-name: lvzheng
       repositories:
         enabled: true
+  rabbitmq:
+    password: guest
+    port: 5672
+    host: 127.0.0.1
+    username: guest
 
 
 #  security:
