--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://127.0.0.1/fly?characterEncoding=utf-8&useSSL=false
+#    jdbc:mysql://10.122.30.102:3306/bank_collection?characterEncoding=utf-8&useSSL=false&rewriteBatchedStatements=true
     validation-query: SELECT 1
     validation-query-timeout: 5000
     test-on-borrow: true
