--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,29 @@ spring:
     port: 5672
     host: 127.0.0.1
     username: guest
-
+  kafka:
+    bootstrap-servers: 10.122.45.154:9092,10.122.45.155:9092
+    consumer:
+      group-id: lvzheng
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      earliest 当各分区下有已提交的offset时，从提交的offset开始消费；无提交的offset时，从头开始消费
+#      latest  当各分区下有已提交的offset时，从提交的offset开始消费；无提交的offset时，消费新产生的该分区下的数据
+#      none topic各分区都存在已提交的offset时，从offset后开始消费；只要有一个分区不存在已提交的offset，则抛出异常
+      auto-offset-reset: latest
+      enable-auto-commit: true
+#    如果'enable.auto.commit'为true，则消费者偏移自动提交给Kafka的频率（以毫秒为单位），默认值为5000。
+#      auto-commit-interval: 100ms
+#     设置每次拉取最大10条
+      max-poll-records: 10
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      buffer-memory: 524288
+      retries: 3
+      batch-size: 65536
+    template:
+      default-topic: lvzheng
 
 #  security:
 #    user:
