--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,11 @@
             <version>3.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
