--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@
         </dependency> -->
 
 
-
         <!--<dependency>-->
         <!--<groupId>org.springframework.cloud</groupId>-->
         <!--<artifactId>spring-cloud-starter-openfeign</artifactId>-->
@@ -146,10 +145,10 @@
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
         </dependency>
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-data-redis</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
@@ -214,8 +213,6 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.6</version>
         </dependency>
-
-
 
 
     </dependencies>
