--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,12 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.6</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/cn.smallbun.screw/screw-core -->
+        <dependency>
+            <groupId>cn.smallbun.screw</groupId>
+            <artifactId>screw-core</artifactId>
+            <version>1.0.5</version>
+        </dependency>
 
     </dependencies>
 
