--- a/pom.xml
+++ b/pom.xml
@@ -226,6 +226,13 @@
             <artifactId>screw-core</artifactId>
             <version>1.0.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.binarywang/weixin-java-mp -->
+        <dependency>
+            <groupId>com.github.binarywang</groupId>
+            <artifactId>weixin-java-mp</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
 
     </dependencies>
 
