redis-stock-and-es rest high level client

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -72,6 +72,7 @@ spring:
       buffer-memory: 524288
       retries: 3
       batch-size: 65536
+      acks: all # 0 / 1
     template:
       default-topic: lvzheng
 
