--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,13 @@
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
+            <version>6.2.1</version>
+        </dependency>
+        <!-- ES 客户端 -->
+        <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>6.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
