--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,13 +39,13 @@ spring:
   data:
     mongodb:
       uri: mongodb://localhost:27017/lvzheng
-    elasticsearch:
-      # 配置es节点信息，逗号分隔，如果没有指定，则启动ClientNode
-      cluster-nodes: localhost:9300
-      # 默认为elasticsearch
-      cluster-name: lz
-      repositories:
-        enabled: true
+#    elasticsearch:
+#      # 配置es节点信息，逗号分隔，如果没有指定，则启动ClientNode
+#      cluster-nodes: localhost:9300
+#      # 默认为elasticsearch
+#      cluster-name: lz
+#      repositories:
+#        enabled: true
   rabbitmq:
     password: guest
     port: 5672
